--- a/packages/apollo-links/package.json
+++ b/packages/apollo-links/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/apollo-links",
-  "version": "0.3.3-0",
+  "version": "0.3.3-1",
   "description": "SubQuery Network - graphql links",
   "main": "dist/index.js",
   "author": "SubQuery Pte Limited",
@@ -23,5 +23,5 @@
     "@apollo/client": "*",
     "graphql": "*"
   },
-  "stableVersion": "0.3.2"
+  "stableVersion": "0.3.3-0"
 }
