--- a/packages/network-query/package.json
+++ b/packages/network-query/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/network-query",
-  "version": "0.3.3-0",
+  "version": "0.3.3-1",
   "main": "dist/index.js",
   "description": "SubQuery package containing all gql queries for network dapps",
   "author": "SubQuery Pte Limited",
@@ -23,5 +23,5 @@
     "prettier": "^2.7.1",
     "typescript": "^4.8.4"
   },
-  "stableVersion": "0.3.2"
+  "stableVersion": "0.3.3-0"
 }
