--- a/packages/react-hooks/package.json
+++ b/packages/react-hooks/package.json
@@ -13,6 +13,7 @@
     "@graphql-tools/code-file-loader": "^7.3.6",
     "@graphql-tools/graphql-tag-pluck": "^7.3.6",
     "@graphql-tools/load": "^7.7.7",
+    "@subql/network-client": "workspace:*",
     "@subql/network-query": "workspace:*",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0"
