--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@subql/network-client",
+  "name": "@subql/network-tools",
   "version": "0.3.0",
   "description": "Client sdk for Subquery Network",
   "scripts": {
