--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,10 @@
   "parserOptions": {
     "sourceType": "module"
   },
-  "plugins": ["@typescript-eslint/eslint-plugin", "header"],
+  "plugins": [
+    "@typescript-eslint/eslint-plugin",
+    "header"
+  ],
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended"
@@ -14,17 +17,26 @@
     "jest": true,
     "browser": true
   },
-  "ignorePatterns": ["**/packages/**/dist/**", "/test/jest-setup.ts"],
+  "ignorePatterns": [
+    "**/packages/**/dist/**",
+    "/test/jest-setup.ts"
+  ],
   "rules": {
     "@typescript-eslint/interface-name-prefix": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-explicit-any": "off",
-    "header/header": [2, "line", [
-      {
-        "pattern": " Copyright \\d{4}(-\\d{4})? SubQuery Pte Ltd authors & contributors",
-        "template": " Copyright 2020-2023 SubQuery Pte Ltd authors & contributors" },
-      " SPDX-License-Identifier: Apache-2.0"
-    ], 2]
+    "header/header": [
+      2,
+      "line",
+      [
+        {
+          "pattern": " Copyright \\d{4}(-\\d{4})? SubQuery Pte Ltd authors & contributors",
+          "template": " Copyright 2020-2024 SubQuery Pte Ltd authors & contributors"
+        },
+        " SPDX-License-Identifier: Apache-2.0"
+      ],
+      2
+    ]
   }
 }
