--- a/packages/network-support/package.json
+++ b/packages/network-support/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/network-support",
-  "version": "1.1.2",
+  "version": "1.2.0",
   "main": "dist/index.js",
   "author": "SubQuery Pte Limited",
   "license": "Apache-2.0",
@@ -13,7 +13,8 @@
     "cross-fetch": "^4.0.0",
     "js-base64": "^3.7.5",
     "jwt-decode": "^3.1.2",
-    "lru-cache": "^10.0.1"
+    "lru-cache": "^10.0.1",
+    "semver": "^7.6.0"
   },
   "devDependencies": {
     "@types/node": "18",
