--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@octokit/request": "^5.6.3",
     "@subql/contract-sdk": "1.0.3",
     "@testing-library/react": "^14.0.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/jest": "^28.1.6",
     "@types/react": "^18.2.28",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
@@ -58,5 +59,8 @@
       "prettier --write"
     ]
   },
-  "packageManager": "yarn@3.2.4"
+  "packageManager": "yarn@3.2.4",
+  "dependencies": {
+    "crypto-js": "^4.2.0"
+  }
 }
