--- a/packages/network-support/package.json
+++ b/packages/network-support/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/network-support",
-  "version": "1.2.2",
+  "version": "1.2.3-0",
   "main": "dist/index.js",
   "author": "SubQuery Pte Limited",
   "license": "Apache-2.0",
@@ -23,5 +23,5 @@
   "browser": {
     "node-fetch": false
   },
-  "stableVersion": "1.1.0"
+  "stableVersion": "1.2.2"
 }
