--- a/package.json
+++ b/package.json
@@ -59,8 +59,5 @@
       "prettier --write"
     ]
   },
-  "packageManager": "yarn@3.2.4",
-  "dependencies": {
-    "crypto-js": "^4.2.0"
-  }
+  "packageManager": "yarn@3.2.4"
 }
