--- a/packages/network-support/package.json
+++ b/packages/network-support/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@metamask/eth-sig-util": "^7.0.0",
     "cross-fetch": "^4.0.0",
+    "crypto-js": "^4.2.0",
     "js-base64": "^3.7.5",
     "jwt-decode": "^3.1.2",
     "lru-cache": "^10.0.1",
