--- a/packages/network-support/package.json
+++ b/packages/network-support/package.json
@@ -18,6 +18,7 @@
     "semver": "^7.6.0"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "18",
     "typescript": "^4.6.4"
   },
