--- a/packages/network-support/package.json
+++ b/packages/network-support/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@metamask/eth-sig-util": "^7.0.0",
     "cross-fetch": "^4.0.0",
+    "crypto-js": "^4.2.0",
     "js-base64": "^3.7.5",
     "jwt-decode": "^3.1.2",
     "lru-cache": "^10.0.1",
     "semver": "^7.6.0"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "18",
     "typescript": "^4.6.4"
   },
