--- a/packages/network-support/package.json
+++ b/packages/network-support/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@subql/network-support",
-  "version": "1.3.0-7",
-  "main": "dist/index.js",
+  "version": "1.3.0",
+  "main": "src/index.ts",
   "author": "SubQuery Pte Limited",
   "license": "Apache-2.0",
   "scripts": {
